fixed aos-transition creating vertical scrollbar in browser due to transform effect

--- a/public/stylesheet/utility.css
+++ b/public/stylesheet/utility.css
@@ -331,6 +331,9 @@
 .color-000 {
   color: #000 !important;
 }
+.overflow-hidden {
+  overflow: hidden;
+}
 .color-fff {
   color: #fff !important;
 }
